--- a/client/src/components/screens/register.css
+++ b/client/src/components/screens/register.css
@@ -123,7 +123,16 @@ body{
     height: 53%;
     border-radius: 7px;
     font-size: 16px;
-    border:1px solid white
+    border:1px solid white,
+    
+}
+.submit-button:hover{
+    background: #141E30;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #243B55, #141E30);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #243B55, #141E30); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
+    cursor:pointer;
+    color:white    
 }
 
 .linkerman{
@@ -135,6 +144,7 @@ body{
 @media (max-width:600px){
     .one-c{
         width: 100vw;
+        margin-top: 0;
     }
     .two-c{
         width: 80%;
